<?xml version="1.0"?>
<package>
  <name>sick_scan_ros</name>
  <version>0.0.1</version>
  <description>
    A ROS tool to communicate with SICK lidar systems
  </description>

  <maintainer email="michael.lehning@lehning.de">Michael Lehning</maintainer>
  <author email="michael.lehning@lehning.de">Michael Lehning</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/sick_scan_ros</url>
  <url type="repository">https://github.com/SickScan/sick_scan_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>


